# agent

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  setup_stakpak.sh
.github/workflows/: build-and-release.yml  ci.yml
cli/: Cargo.toml
cli/src/: code_index.rs  main.rs
cli/src/commands/: mod.rs
cli/src/commands/acp/: server.rs
cli/src/commands/agent/run/: mcp_init.rs  mode_async.rs  mode_interactive.rs  profile_switch.rs  tooling.rs
cli/src/commands/ak/: mod.rs
cli/src/commands/auth/: login.rs  mod.rs
cli/src/commands/autopilot/: mod.rs
cli/src/commands/mcp/: mod.rs  proxy.rs
cli/src/commands/sessions/: messages.rs  mod.rs  output.rs  tests.rs
cli/src/commands/watch/: mod.rs  scheduler.rs
cli/src/commands/watch/commands/: mod.rs
cli/src/config/: app.rs  mod.rs  openai_resolver.rs  tests.rs
cli/src/onboarding/: auth_flow.rs  mod.rs  save_config.rs
cli/src/prompts/: system_prompt.v1.md
cli/src/utils/: plugins.rs
cli/tests/: ak_cli.rs
docs/architecture-enhancements/: 09-hierarchical-run_command-approvals.md
libs/agent-core/: Cargo.toml
libs/agent-core/src/: approval.rs  types.rs
libs/ai/src/providers/anthropic/: convert.rs  types.rs
libs/ai/src/providers/bedrock/: convert.rs  models.rs
libs/ai/src/providers/openai/: convert.rs  mod.rs  provider.rs  runtime.rs  stream.rs  types.rs
libs/ai/src/types/: headers.rs
libs/ak/: Cargo.toml
libs/ak/src/: error.rs  format.rs  lib.rs  search.rs  skills.rs  store.rs
libs/api/: Cargo.toml
libs/api/src/: lib.rs  storage.rs
libs/api/src/client/: mod.rs  provider.rs
libs/api/src/local/: storage.rs  tests.rs
libs/api/src/local/hooks/task_board_context/: system_prompt.txt
libs/api/src/stakpak/: storage.rs
libs/mcp/config/: Cargo.toml
libs/mcp/config/src/: lib.rs
libs/mcp/proxy/: Cargo.toml
libs/mcp/proxy/src/client/: mod.rs
libs/mcp/proxy/src/server/: mod.rs
libs/mcp/server/src/: subagent_tools.rs
libs/server/src/: routes.rs
libs/shared/src/: jwt.rs  lib.rs  paths.rs  telemetry.rs
libs/shared/src/models/: mod.rs  openai_runtime.rs  stakai_adapter.rs
libs/shared/src/models/integrations/: anthropic.rs  gemini.rs  openai.rs
libs/shared/src/oauth/: config.rs  flow.rs  mod.rs  registry.rs
libs/shared/src/oauth/providers/: anthropic.rs  gemini.rs  mod.rs  openai_codex.rs
libs/shell-tool-approvals/: Cargo.toml
libs/shell-tool-approvals/src/: lib.rs  matcher.rs  parse.rs  resolver.rs
tui/: Cargo.toml
tui/src/: app.rs  event_loop.rs  lib.rs  view.rs
tui/src/app/: events.rs  types.rs
tui/src/services/: auto_approve.rs  banner.rs  commands.rs  file_changes_popup.rs  file_diff.rs  file_search.rs  helper_block.rs  helper_dropdown.rs  hint_helper.rs  layout.rs  message.rs  message_action_popup.rs  mod.rs  model_switcher.rs  plan_comments.rs  plan_review.rs  profile_switcher.rs  rulebook_switcher.rs  shell_popup.rs  shortcuts_popup.rs  side_panel.rs  text_selection.rs
tui/src/services/handlers/: ask_user.rs  banner.rs  dialog.rs  input.rs  message.rs  misc.rs  mod.rs  navigation.rs  popup.rs  shell.rs  text_selection.rs  tool.rs
