[workspace]
resolver = "2"
members = [
  "cli",
  "tui",
  "libs/shared",
  "libs/api",
  "libs/ai",
  "libs/agent-core",
  "libs/server",
  "libs/gateway",
  "libs/mcp/client",
  "libs/mcp/server",
  "libs/mcp/proxy",
]
default-members = ["cli"]


[workspace.package]
version = "0.3.71"
edition = "2024"
description = "Stakpak: Your DevOps AI Agent. Generate infrastructure code, debug Kubernetes, configure CI/CD, automate deployments, without giving an LLM the keys to production."
license = "Apache-2.0"
repository = "https://github.com/stakpak/agent"
homepage = "https://stakpak.io"


[workspace.dependencies]
stakai = { path = "libs/ai", version = "0.3.71" }
stakpak-api = { path = "libs/api", version = "0.3.71" }
stakpak-mcp-server = { path = "libs/mcp/server", version = "0.3.71" }
stakpak-mcp-client = { path = "libs/mcp/client", version = "0.3.71" }
stakpak-mcp-proxy = { path = "libs/mcp/proxy", version = "0.3.71" }
stakpak-agent-core = { path = "libs/agent-core", version = "0.3.71" }
stakpak-gateway = { path = "libs/gateway", version = "0.3.71" }
stakpak-server = { path = "libs/server", version = "0.3.71" }
stakpak-tui = { path = "tui", version = "0.3.71" }
stakpak-shared = { path = "libs/shared", version = "0.3.71" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
rmcp = { version = "0.11.0", features = [
  "base64",
  "macros",
  "client",
  "server",
  "reqwest",
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
  "transport-streamable-http-server-session",
  "transport-worker",
], default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "=0.12.15", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
ratatui = { version = "0.29.0", features = [
  "scrolling-regions",
  "unstable-rendered-line-info",
  "unstable-widget-ref",
] }
toml = "0.8.0"
rand = "0.9.1"
walkdir = "2.0.0"
notify = "8.0.0"
thiserror = "2.0.12"
rustls = "0.23.29"
rcgen = "0.12.1"
rustls-pemfile = "2.1.2"
tokio-rustls = "0.26.0"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum = "0.8"
time = { version = "0.3", features = ["macros"] }
rustls-platform-verifier = "0.5"
crossterm = "0.29"
tempfile = "3.0"
similar = { version = "2.7.0", features = ["inline"] }
schemars = { version = "1.1.0", features = ["chrono"] }
# Ripgrep ecosystem for grep/glob in view tool
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
globset = "0.4"
async-trait = "0.1"
open = "5.3.2"
log = "0.4"
libsql = "0.9.29"
terminal-light = "1.8"

# Required nightly
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
string_slice = "deny"
