[package]
name = "stakpak-tui"
version = { workspace = true }
edition = "2024"
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
stakai = { workspace = true }
stakpak-shared = { workspace = true }
stakpak-api = { workspace = true }
shell-tool-approvals = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
tempfile = { workspace = true }
rand = "0.9"
textwrap = "0.16.2"
unicode-segmentation = "1.12.0"
crossterm = { workspace = true }
tokio = { version = "1.39", features = ["full"] }
unicode-width = "0.2.0"
uuid = { workspace = true }
chrono = "0.4"
console = "0.15"
ansi-to-tui = "7.0.0"
similar = { workspace = true }
syntect = "5.2.0"
nucleo-matcher = "0.3.1"
ignore = "0.4.23"
open = { workspace = true }
log = { workspace = true }
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
shlex = "1.3.0"
url = "2"
base64 = "0.22"
vt100 = "0.15.2"
dirs = "5.0"
serde_yaml = "0.9"
sha2 = "0.10"

[lints]
workspace = true


[target.'cfg(any(unix, windows))'.dependencies]
portable-pty = "0.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"
