[package]
name = "shell-tool-approvals"
version = { workspace = true }
edition = "2024"
description = "Shell command parsing and hierarchical scope resolution for tool approval"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
globset = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
tree-sitter = "0.26.6"
tree-sitter-bash = "0.25.1"

[lints]
workspace = true
